# egide

./: .dockerignore  .env.example  .gitattributes  .gitignore  .gitleaks.toml  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE-COMMERCIAL.md  README.md  SECURITY.md  STATUS.md  go.work  go.work.sum  osv-scanner.toml  package.json  pnpm-lock.yaml  pyproject.toml  turbo.json
.claude/skills/: README.md  ansible.md  audit-readiness.md  bpmn-2-0.md  cis-benchmarks.md  dmn-decision-model.md  dora-regulation.md  hds-health-data.md  iso27001-2022.md  iso9001-2026.md  itil4-framework.md  kyverno.md  llm-router-providers.md  nis2-directive.md  opa-rego.md  oscal-structure.md  proxmox-api.md  pyramid-coherence-rules.md  shacl-validation.md
.github/: CODEOWNERS  PULL_REQUEST_TEMPLATE.md  dependabot.yml  release.yml
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  documentation.yml  feature_request.yml
.github/workflows/: ci.yml  release.yml
agents/common/: README.md  pyproject.toml
agents/common/src/agents_common/: __init__.py  audit.py  circuit_breaker.py  errors.py  hallucination_guard.py  llm_router_client.py
agents/common/tests/: __init__.py  test_audit.py  test_circuit_breaker.py  test_errors.py  test_hallucination_guard.py
agents/compliance/: pyproject.toml
agents/compliance/src/agents_compliance/: __init__.py  agent.py  models.py
agents/compliance/src/agents_compliance/tools/: __init__.py  classify_chunk.py  draft_policy.py  gap_analysis.py  search_anchors.py  validate.py
agents/orchestrator/: Dockerfile  pyproject.toml
agents/orchestrator/src/agents_orchestrator/: __init__.py  __main__.py  j1_state_machine.py  worker.py
apps/api/: Dockerfile  README.md  biome.json  package.json
apps/api/src/: auth.ts  env.ts  server.ts  trpc.ts
apps/api/src/contexts/audit/: router.ts
apps/api/src/middleware/: tenant.ts
apps/api/src/shared/: logger.ts  s3.ts
apps/cli/: Dockerfile  README.md  package.json  tsconfig.json
apps/cli/src/: index.ts
apps/cli/src/commands/: approval.ts  auth.ts  compile.ts  ping.ts  pyramid.ts
apps/landing/: .gitignore  README.md  biome.json  next.config.mjs  package.json
apps/landing/public/: robots.txt
apps/landing/src/app/: globals.css  layout.tsx  page.tsx
apps/landing/src/components/: Footer.tsx  Hero.tsx  HowWeBuildIt.tsx  Pricing.tsx  ShowMeTheCode.tsx  Sovereignty.tsx  WhatItDoes.tsx
apps/web/: Dockerfile  README.md  biome.json  next.config.mjs  package.json  postcss.config.mjs  tsconfig.json  tsconfig.tsbuildinfo
apps/web/src/app/: apple-icon.tsx  globals.css  icon.tsx  layout.tsx  opengraph-image.tsx  page.tsx  robots.ts  sitemap.ts
apps/web/src/components/: CompiledArtifact.tsx  DropZone.tsx  ProgressTimeline.tsx  PyramidViewer.tsx
apps/web/src/lib/: nats.ts
deploy/docker/: README.md  compose.yaml  otel-config.yaml
deploy/docker/postgres-init/: 01-extensions.sql
deploy/helm/: Chart.yaml  README.md  values.yaml
deploy/helm/templates/: NOTES.txt  _component.tpl  _helpers.tpl  api-deployment.yaml  compiler-deployment.yaml  datalake-deployment.yaml  extractor-deployment.yaml  ingress.yaml  migrations-job.yaml  networkpolicy.yaml  orchestrator-deployment.yaml  pipeline-deployment.yaml  poddisruptionbudget.yaml  secret.yaml  serviceaccount.yaml  validator-deployment.yaml  web-deployment.yaml
deploy/k3d/: README.md  cluster.yaml
deploy/scripts/: init-db-rls.sql  seed-system-user.sql
docs/: architecture-principles.md  architecture.md  dashboard-blueprint.md  design-system.md  editions.md  landing-blueprint.md  migration.md  roadmap.md  security.md
docs/adr/: 001-foundation.md  002-licensing-strategy.md  003-stack-decision.md  004-multi-llm-router.md  005-policy-as-code-multi-target.md  006-graph-persistence.md  007-rag-normative.md  008-job-queue.md  009-eval-framework.md  010-approval-workflow.md  011-agent-strategy.md  012-terminology.md  013-mvp-persona.md  014-security-by-design.md  015-architectural-principles.md  016-secure-sdlc.md  017-frontend-identity.md
docs/specs/: intent-ir.md
docs/threat-models/: README.md  api-gateway.md  llm-router.md  multi-tenant-isolation.md
docs/tutorials/: 01-iso27001-nis2-from-ansible.md  02-policy-to-rego-and-ansible.md  README.md
edge/agent/: Dockerfile  go.mod  server
edge/agent/cmd/server/: main.go
ontologies/: README.md  registry.yaml
ontologies/clusters/: awareness-training.yaml  business-continuity.yaml  change-management.yaml  continual-improvement.yaml  document-control.yaml  incident-management.yaml  internal-audit.yaml  management-review.yaml  risk-management.yaml  supplier-management.yaml
scripts/: e2e-demo.sh
services/compiler/: Dockerfile  go.mod  go.sum
services/compiler/cmd/server/: main.go
services/compiler/internal/application/: compile_uc.go
services/compiler/internal/domain/: generator.go  intent.go
services/datalake/: Dockerfile  go.mod  server
services/datalake/cmd/server/: main.go
services/extractor/: Dockerfile  pyproject.toml
services/extractor/src/extractor/: __init__.py  __main__.py  app.py  dispatch.py  ingest_ontologies.py  models.py
services/extractor/src/extractor/extractors/: __init__.py  docling_extractor.py  docx_extractor.py  markitdown_extractor.py  pypdf_extractor.py
services/pipeline/: Dockerfile  go.mod  server
services/pipeline/cmd/server/: main.go
services/validator/: Dockerfile  go.mod  go.sum
services/validator/cmd/server/: main.go
services/validator/internal/application/: rag_uc.go  validate_uc.go
services/validator/internal/domain/: engine.go  pyramid.go
services/validator/internal/rules/: rules.go  rules_test.go
tests/eval/: README.md  conftest.py
tests/eval/fixtures/classification/: clf_fixtures.yaml  framework_coverage.yaml
tests/eval/fixtures/coherence/: coh_fixtures.yaml
tests/eval/fixtures/generation/: gen_fixtures.yaml
tests/eval/matrix/: run_matrix.py
tests/eval/results/: README.md
tests/eval/runners/: test_classification.py  test_coherence.py  test_framework_coverage.py  test_generation.py  test_j1_state_machine.py  test_models.py
(+57 files in other folders)
