[project]
name = "egide-workspace"
version = "0.0.1"
description = "Egide — Python services workspace (extractor + agents)"
requires-python = ">=3.13,<3.14"

[tool.uv.workspace]
members = [
    "services/extractor",
    "agents/common",
    "agents/compliance",
    "agents/orchestrator",
]

[dependency-groups]
dev = [
    "pytest>=8.3.0",
    "pytest-asyncio>=0.24.0",
    "ruff>=0.8.0",
    "mypy>=1.13.0",
    "bandit>=1.8.0",
    "pyyaml>=6.0.2",
    # Needed by agents/compliance and agents/orchestrator tests
    "pydantic>=2.10.0",
    "structlog>=24.4.0",
    "httpx>=0.27.0",
    "pydantic-ai>=0.0.53",
]

# Force CPU-only torch (extractor only needs Docling CPU inference; CUDA wheels
# are ~5 GB and exhaust GitHub runner disk during docker build).
[tool.uv.sources]
torch = [{ index = "pytorch-cpu" }]
torchvision = [{ index = "pytorch-cpu" }]

[[tool.uv.index]]
name = "pytorch-cpu"
url = "https://download.pytorch.org/whl/cpu"
explicit = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py313"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "UP", "B", "C4", "SIM", "RUF"]
ignore = ["E501"]

[tool.mypy]
python_version = "3.13"
strict = true
ignore_missing_imports = true
