[project]
name = "egide-agents-common"
version = "0.0.1"
description = "Egide AI workers shared library: PydanticAI + CircuitBreaker + LLM Router adapter + audit + hallucination guard (cf. ADR 011)"
requires-python = ">=3.13,<3.14"
license = "AGPL-3.0-only"
dependencies = [
    "pydantic>=2.9.0",
    "pydantic-ai>=0.0.13",
    "instructor>=1.6.0",
    "httpx>=0.27.0",
    "nats-py>=2.9.0",
    "structlog>=24.4.0",
    "tenacity>=9.0.0",
    "anyio>=4.6.0",
]

[dependency-groups]
dev = [
    "pytest>=8.3.0",
    "pytest-asyncio>=0.24.0",
    "pytest-cov>=5.0.0",
    "ruff>=0.6.9",
    "mypy>=1.11.0",
    "bandit>=1.7.10",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/agents_common"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
