[project]
name = "egide-agents-compliance"
version = "0.0.1"
description = "Egide compliance AI worker: multi-step PydanticAI super-agent with ~10 tools (cf. ADR 011 Strategy B)"
requires-python = ">=3.13,<3.14"
license = "AGPL-3.0-only"
dependencies = [
    # In-workspace dependency
    "egide-agents-common",
    # AI framework (cf. ADR 011 — PydanticAI, no LangChain)
    "pydantic-ai>=0.0.53",
    "instructor>=1.7.0",
    # Data validation
    "pydantic>=2.10.0",
    # Async HTTP (for LLMRouterClient calls)
    "httpx>=0.27.0",
    # Structured logging
    "structlog>=24.4.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/agents_compliance"]

[tool.uv.sources]
egide-agents-common = { workspace = true }

[dependency-groups]
dev = [
    "pytest>=8.3.0",
    "pytest-asyncio>=0.24.0",
    "ruff>=0.8.0",
    "mypy>=1.13.0",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
